# virgin-media-test

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: model
scripts/: predict.py  train.py
src/: __init__.py  config.py  gcp.py  model.py
tests/: test_model.py
